Fixed some issues with breakpoints on mobile devices

--- a/src/css/About.css
+++ b/src/css/About.css
@@ -106,5 +106,14 @@ footer {
   table {
     width: 90% !important;
   }
+  #about {
+    min-height: auto;
+  }
+  #education {
+    min-height: auto;
+  }
+  .main {
+    margin: auto;
+  }
 }
 /* <---> */
